# fconvert

./: .gitignore  CMakeLists.txt  FEATURES_IMPLEMENTED.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  build.bat  build.sh  create_test_bmp.cpp  test.tar  test.tgz  test_from_zip.tar  test_rle.tga  test_roundtrip.tgz
.claude/: settings.local.json
config/: default_config.ini
include/: fconvert.h
src/: main.cpp
src/cli/: argument_parser.cpp  argument_parser.h  config.cpp  config.h
src/core/: batch_processor.cpp  batch_processor.h  converter.cpp  converter.h  file_detector.cpp  file_detector.h  logger.cpp  logger.h
src/formats/archive/: archive_converter.cpp  archive_converter.h  bz2.cpp  bz2.h  gz.cpp  gz.h  tar.cpp  tar.h  xz.cpp  xz.h  zip.cpp  zip.h
src/formats/audio/: aac.cpp  aac.h  audio_converter.cpp  audio_converter.h  flac.cpp  flac.h  mp3.cpp  mp3.h  ogg.cpp  ogg.h  wav.cpp  wav.h
src/formats/data/: data_converter.cpp  data_converter.h  ini.cpp  ini.h  json.cpp  json.h  toml.cpp  toml.h  xml.cpp  xml.h  yaml.cpp  yaml.h
src/formats/disc/: bincue.cpp  bincue.h  chd.cpp  chd.h  disc_converter.cpp  disc_converter.h  iso.cpp  iso.h  vhd.cpp  vhd.h
src/formats/document/: document_converter.cpp  document_converter.h  docx.cpp  docx.h  html.cpp  html.h  markdown.cpp  markdown.h  pdf.cpp  pdf.h  rtf.cpp  rtf.h  txt.cpp  txt.h
src/formats/filesystem/: ext2.cpp  ext2.h  fat32.cpp  fat32.h
src/formats/font/: font_converter.cpp  font_converter.h  otf.cpp  otf.h  ttf.cpp  ttf.h  woff.cpp  woff.h
src/formats/image/: bmp.cpp  bmp.h  image_converter.cpp  image_converter.h  jpeg.cpp  jpeg.h  netpbm.cpp  netpbm.h  png.cpp  png.h  tga.cpp  tga.h
src/formats/model3d/: dae.cpp  dae.h  fbx.cpp  fbx.h  model3d_converter.cpp  model3d_converter.h  obj.cpp  obj.h  stl.cpp  stl.h
src/formats/spreadsheet/: csv.cpp  csv.h  ods.cpp  ods.h  spreadsheet_converter.cpp  spreadsheet_converter.h  xlsx.cpp  xlsx.h
src/formats/vector/: eps.cpp  eps.h  svg.cpp  svg.h  vector_converter.cpp  vector_converter.h
src/formats/video/: avi.cpp  avi.h  mp4.cpp  mp4.h  video_converter.cpp  video_converter.h  webm.cpp  webm.h
src/utils/: crc32.cpp  crc32.h  deflate.cpp  deflate.h  deflate_compress.cpp  file_utils.cpp  file_utils.h  gzip.cpp  gzip.h  image_transform.cpp  image_transform.h  lz77.cpp  lz77.h  math_utils.cpp  math_utils.h  memory.cpp  memory.h  tar.cpp  tar.h  zip.cpp  zip.h
